--- a/Hyperparameter optimisation.ipynb
+++ b/Hyperparameter optimisation.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "88f790cf",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-08T13:07:50.832654Z",
+     "iopub.status.busy": "2024-07-08T13:07:50.831850Z",
+     "iopub.status.idle": "2024-07-08T13:07:51.211448Z",
+     "shell.execute_reply": "2024-07-08T13:07:51.211188Z",
+     "shell.execute_reply.started": "2024-07-08T13:07:50.832601Z"
+    },
     "jupyter": {
      "is_executing": true
     },
@@ -47,14 +54,14 @@
   },
   {
    "cell_type": "raw",
-   "id": "c19d1e70-94ad-4868-8a8c-51ac2457a837",
+   "id": "11d0e556-efa5-4132-8444-6e5792650331",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-05T09:43:19.546892Z",
-     "iopub.status.busy": "2024-07-05T09:43:19.545856Z",
-     "iopub.status.idle": "2024-07-05T09:43:20.615446Z",
-     "shell.execute_reply": "2024-07-05T09:43:20.615170Z",
-     "shell.execute_reply.started": "2024-07-05T09:43:19.546866Z"
+     "iopub.execute_input": "2024-07-07T12:02:08.057574Z",
+     "iopub.status.busy": "2024-07-07T12:02:08.057423Z",
+     "iopub.status.idle": "2024-07-07T12:02:09.163006Z",
+     "shell.execute_reply": "2024-07-07T12:02:09.162638Z",
+     "shell.execute_reply.started": "2024-07-07T12:02:08.057567Z"
     }
    },
    "source": [
@@ -112,14 +119,44 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4d2b8fc2-1220-4072-8e76-2bd17dc53de7",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6f1c1892-d386-4a4a-ac2e-acf0162c0b38",
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.execute_input": "2024-07-08T13:07:51.212570Z",
+     "iopub.status.busy": "2024-07-08T13:07:51.212344Z",
+     "iopub.status.idle": "2024-07-08T13:09:00.139881Z",
+     "shell.execute_reply": "2024-07-08T13:09:00.139209Z",
+     "shell.execute_reply.started": "2024-07-08T13:07:51.212561Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
    },
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 16\u001b[0m\n\u001b[1;32m     12\u001b[0m sampling_rate \u001b[38;5;241m=\u001b[39m dataset_train[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     14\u001b[0m dataset \u001b[38;5;241m=\u001b[39m ConcatDataset([dataset_train, dataset_val])\n\u001b[0;32m---> 16\u001b[0m X_train_raw \u001b[38;5;241m=\u001b[39m [sample[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m dataset]\n\u001b[1;32m     17\u001b[0m Y_train_raw \u001b[38;5;241m=\u001b[39m [sample[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m dataset]\n\u001b[1;32m     19\u001b[0m is_multivariate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[2], line 16\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     12\u001b[0m sampling_rate \u001b[38;5;241m=\u001b[39m dataset_train[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     14\u001b[0m dataset \u001b[38;5;241m=\u001b[39m ConcatDataset([dataset_train, dataset_val])\n\u001b[0;32m---> 16\u001b[0m X_train_raw \u001b[38;5;241m=\u001b[39m [sample[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m1\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m dataset]\n\u001b[1;32m     17\u001b[0m Y_train_raw \u001b[38;5;241m=\u001b[39m [sample[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m sample \u001b[38;5;129;01min\u001b[39;00m dataset]\n\u001b[1;32m     19\u001b[0m is_multivariate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torch/utils/data/dataset.py:335\u001b[0m, in \u001b[0;36mConcatDataset.__getitem__\u001b[0;34m(self, idx)\u001b[0m\n\u001b[1;32m    333\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    334\u001b[0m     sample_idx \u001b[38;5;241m=\u001b[39m idx \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcumulative_sizes[dataset_idx \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m--> 335\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdatasets[dataset_idx][sample_idx]\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torchaudio/datasets/speechcommands.py:179\u001b[0m, in \u001b[0;36mSPEECHCOMMANDS.__getitem__\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m    159\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Load the n-th sample from the dataset.\u001b[39;00m\n\u001b[1;32m    160\u001b[0m \n\u001b[1;32m    161\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    176\u001b[0m \u001b[38;5;124;03m        Utterance number\u001b[39;00m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    178\u001b[0m metadata \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_metadata(n)\n\u001b[0;32m--> 179\u001b[0m waveform \u001b[38;5;241m=\u001b[39m _load_waveform(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_archive, metadata[\u001b[38;5;241m0\u001b[39m], metadata[\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m    180\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (waveform,) \u001b[38;5;241m+\u001b[39m metadata[\u001b[38;5;241m1\u001b[39m:]\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torchaudio/datasets/utils.py:51\u001b[0m, in \u001b[0;36m_load_waveform\u001b[0;34m(root, filename, exp_sample_rate)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_load_waveform\u001b[39m(\n\u001b[1;32m     46\u001b[0m     root: \u001b[38;5;28mstr\u001b[39m,\n\u001b[1;32m     47\u001b[0m     filename: \u001b[38;5;28mstr\u001b[39m,\n\u001b[1;32m     48\u001b[0m     exp_sample_rate: \u001b[38;5;28mint\u001b[39m,\n\u001b[1;32m     49\u001b[0m ):\n\u001b[1;32m     50\u001b[0m     path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(root, filename)\n\u001b[0;32m---> 51\u001b[0m     waveform, sample_rate \u001b[38;5;241m=\u001b[39m torchaudio\u001b[38;5;241m.\u001b[39mload(path)\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m exp_sample_rate \u001b[38;5;241m!=\u001b[39m sample_rate:\n\u001b[1;32m     53\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msample rate should be \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexp_sample_rate\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, but got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msample_rate\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torchaudio/_backend/utils.py:205\u001b[0m, in \u001b[0;36mget_load_func.<locals>.load\u001b[0;34m(uri, frame_offset, num_frames, normalize, channels_first, format, buffer_size, backend)\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Load audio data from source.\u001b[39;00m\n\u001b[1;32m    129\u001b[0m \n\u001b[1;32m    130\u001b[0m \u001b[38;5;124;03mBy default (``normalize=True``, ``channels_first=True``), this function returns Tensor with\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    202\u001b[0m \u001b[38;5;124;03m        `[channel, time]` else `[time, channel]`.\u001b[39;00m\n\u001b[1;32m    203\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    204\u001b[0m backend \u001b[38;5;241m=\u001b[39m dispatcher(uri, \u001b[38;5;28mformat\u001b[39m, backend)\n\u001b[0;32m--> 205\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m backend\u001b[38;5;241m.\u001b[39mload(uri, frame_offset, num_frames, normalize, channels_first, \u001b[38;5;28mformat\u001b[39m, buffer_size)\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torchaudio/_backend/ffmpeg.py:297\u001b[0m, in \u001b[0;36mFFmpegBackend.load\u001b[0;34m(uri, frame_offset, num_frames, normalize, channels_first, format, buffer_size)\u001b[0m\n\u001b[1;32m    287\u001b[0m \u001b[38;5;129m@staticmethod\u001b[39m\n\u001b[1;32m    288\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\n\u001b[1;32m    289\u001b[0m     uri: InputType,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    295\u001b[0m     buffer_size: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4096\u001b[39m,\n\u001b[1;32m    296\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[torch\u001b[38;5;241m.\u001b[39mTensor, \u001b[38;5;28mint\u001b[39m]:\n\u001b[0;32m--> 297\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m load_audio(uri, frame_offset, num_frames, normalize, channels_first, \u001b[38;5;28mformat\u001b[39m)\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torchaudio/_backend/ffmpeg.py:91\u001b[0m, in \u001b[0;36mload_audio\u001b[0;34m(src, frame_offset, num_frames, convert, channels_first, format, buffer_size)\u001b[0m\n\u001b[1;32m     89\u001b[0m sample_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(s\u001b[38;5;241m.\u001b[39mget_src_stream_info(s\u001b[38;5;241m.\u001b[39mdefault_audio_stream)\u001b[38;5;241m.\u001b[39msample_rate)\n\u001b[1;32m     90\u001b[0m \u001b[38;5;28mfilter\u001b[39m \u001b[38;5;241m=\u001b[39m _get_load_filter(frame_offset, num_frames, convert)\n\u001b[0;32m---> 91\u001b[0m waveform \u001b[38;5;241m=\u001b[39m _load_audio(s, \u001b[38;5;28mfilter\u001b[39m, channels_first)\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m waveform, sample_rate\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torchaudio/_backend/ffmpeg.py:68\u001b[0m, in \u001b[0;36m_load_audio\u001b[0;34m(s, filter, channels_first)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_load_audio\u001b[39m(\n\u001b[1;32m     64\u001b[0m     s: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtorchaudio.io.StreamReader\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28mfilter\u001b[39m: Optional[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m     66\u001b[0m     channels_first: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     67\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor:\n\u001b[0;32m---> 68\u001b[0m     s\u001b[38;5;241m.\u001b[39madd_audio_stream(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, filter_desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfilter\u001b[39m)\n\u001b[1;32m     69\u001b[0m     s\u001b[38;5;241m.\u001b[39mprocess_all_packets()\n\u001b[1;32m     70\u001b[0m     chunk \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mpop_chunks()[\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[0;32m~/miniforge3/envs/hadsp_env/lib/python3.11/site-packages/torio/io/_streaming_media_decoder.py:778\u001b[0m, in \u001b[0;36mStreamingMediaDecoder.add_audio_stream\u001b[0;34m(self, frames_per_chunk, buffer_chunk_size, stream_index, decoder, decoder_option, filter_desc)\u001b[0m\n\u001b[1;32m    776\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    777\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThere is no audio stream.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 778\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_be\u001b[38;5;241m.\u001b[39madd_audio_stream(\n\u001b[1;32m    779\u001b[0m     i,\n\u001b[1;32m    780\u001b[0m     frames_per_chunk,\n\u001b[1;32m    781\u001b[0m     buffer_chunk_size,\n\u001b[1;32m    782\u001b[0m     filter_desc,\n\u001b[1;32m    783\u001b[0m     decoder,\n\u001b[1;32m    784\u001b[0m     decoder_option \u001b[38;5;129;01mor\u001b[39;00m {},\n\u001b[1;32m    785\u001b[0m )\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
@@ -131,17 +168,13 @@
     "\n",
     "dataset_train = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"training\")\n",
     "dataset_val = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"validation\")\n",
-    "dataset_test = SPEECHCOMMANDS(root=\"datasets/\", download=True, subset=\"testing\")\n",
     "\n",
     "sampling_rate = dataset_train[0][1]\n",
     "\n",
     "dataset = ConcatDataset([dataset_train, dataset_val])\n",
     "\n",
-    "\n",
     "X_train_raw = [sample[0][0].numpy().reshape(-1, 1) for sample in dataset]\n",
     "Y_train_raw = [sample[2] for sample in dataset]\n",
-    "X_test_raw = [sample[0][0].numpy().reshape(-1, 1) for sample in dataset_test]\n",
-    "Y_test = [sample[2] for sample in dataset_test]\n",
     "\n",
     "is_multivariate = False\n",
     "\n",
@@ -149,15 +182,12 @@
     "\n",
     "is_instances_classification = True\n",
     "\n",
-    "\n",
     "le = LabelEncoder()\n",
     "Y_train_raw = le.fit_transform(Y_train_raw).reshape(-1, 1)\n",
-    "Y_test = le.transform(Y_test).reshape(-1, 1)\n",
     "\n",
     "# One-hot encode the labels\n",
     "ohe = OneHotEncoder(sparse_output=False)\n",
-    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n",
-    "Y_test = ohe.transform(Y_test.reshape(-1, 1))\n"
+    "Y_train_raw = ohe.fit_transform(Y_train_raw.reshape(-1, 1))\n"
    ]
   },
   {
@@ -220,15 +250,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69bcc4da-a87f-44e0-ae38-155181df0ae5",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "id": "1426fece-a207-4fb2-89d6-2637b610ba68",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-07-06T12:55:07.187815Z",
+     "iopub.status.busy": "2024-07-06T12:55:07.187541Z",
+     "iopub.status.idle": "2024-07-06T12:55:08.468570Z",
+     "shell.execute_reply": "2024-07-06T12:55:08.468190Z",
+     "shell.execute_reply.started": "2024-07-06T12:55:07.187802Z"
+    }
+   },
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"JapaneseVowels\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name, seed=SEED)"
    ]
@@ -247,6 +283,12 @@
    "id": "615a38d2df41a727",
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.status.busy": "2024-07-08T13:09:00.140091Z",
+     "iopub.status.idle": "2024-07-08T13:09:00.140190Z",
+     "shell.execute_reply": "2024-07-08T13:09:00.140139Z",
+     "shell.execute_reply.started": "2024-07-08T13:09:00.140134Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -282,6 +324,12 @@
    "id": "4fca76d0e06f936c",
    "metadata": {
     "collapsed": false,
+    "execution": {
+     "iopub.status.busy": "2024-07-08T13:09:00.140642Z",
+     "iopub.status.idle": "2024-07-08T13:09:00.140756Z",
+     "shell.execute_reply": "2024-07-08T13:09:00.140698Z",
+     "shell.execute_reply.started": "2024-07-08T13:09:00.140694Z"
+    },
     "jupyter": {
      "outputs_hidden": false
     }
@@ -421,8 +469,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f5e2ac17-a4b5-4a6e-a6eb-d2e63438b0c8",
+   "metadata": {
+    "execution": {
+     "iopub.status.busy": "2024-07-08T13:09:00.141311Z",
+     "iopub.status.idle": "2024-07-08T13:09:00.141417Z",
+     "shell.execute_reply": "2024-07-08T13:09:00.141359Z",
+     "shell.execute_reply.started": "2024-07-08T13:09:00.141354Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sampling_rate/np.min(np.hstack(filtered_peak_freqs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f4957e6c-e0cc-4d90-a495-348a8bbab3cd",
    "metadata": {
+    "execution": {
+     "iopub.status.busy": "2024-07-08T13:09:00.141885Z",
+     "iopub.status.idle": "2024-07-08T13:09:00.142002Z",
+     "shell.execute_reply": "2024-07-08T13:09:00.141941Z",
+     "shell.execute_reply.started": "2024-07-08T13:09:00.141936Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -445,7 +516,7 @@
     "SLICE_RANGE = slice(start_step, end_step)\n",
     "RESERVOIR_SIZE = 500\n",
     "\n",
-    "nb_jobs_per_trial = 4\n",
+    "nb_jobs_per_trial = 12\n",
     "function_name = \"desp\" # \"desp\" ou \"hadsp\" or \"random\"\n",
     "data_type = \"normal\" # \"normal\" ou \"noisy\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
@@ -491,11 +562,9 @@
     "        max_partners = trial.suggest_int('max_partners', 10, 20)\n",
     "        use_full_instance = trial.suggest_categorical('use_full_instance', [True, False])\n",
     "        TIME_INCREMENT = trial.suggest_int('time_increment', int(min_window_size+1), 100) # int(min_window_size+1) or int(max_window_size)\n",
-    "        time_increment_span = trial.suggest_int('time_increment_span', 0, int(max_window_size)-100)\n",
+    "        max_increment_span = int(max_window_size) if int(max_window_size) - 100 < 0 else int(max_window_size) - 100\n",
+    "        time_increment_span = trial.suggest_int('time_increment_span', 0, max_increment_span)\n",
     "        MAX_TIME_INCREMENT = TIME_INCREMENT + time_increment_span #int(max_window_size) or None or TIME_INCREMENT\n",
-    "        if int(max_window_size) < TIME_INCREMENT or TIME_INCREMENT < min_window_size:\n",
-    "            raise ValueError(f\"INCREMENT must be greater than {min_window_size} and smaller than {max_window_size}. Current INCREMENT is {TIME_INCREMENT}.\")\n",
-    "\n",
     "\n",
     "    # CROSS-VALIDATION METHODS\n",
     "    total_score = 0\n",
@@ -563,7 +632,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94a7cbad-31bd-49d2-a3c1-00d9ccb6aaab",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.status.busy": "2024-07-08T13:09:00.142527Z",
+     "iopub.status.idle": "2024-07-08T13:09:00.142628Z",
+     "shell.execute_reply": "2024-07-08T13:09:00.142574Z",
+     "shell.execute_reply.started": "2024-07-08T13:09:00.142569Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import optuna\n",
@@ -591,7 +667,7 @@
     "    study.optimize(objective, n_trials=n_trials)\n",
     "\n",
     "N_TRIALS = 400\n",
-    "n_parallel_studies = 3\n",
+    "n_parallel_studies = 1\n",
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
