Working test data + small corrections

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -62,17 +62,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "26e06768-4c6b-4047-9942-616f3160e87b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-14T22:24:28.461137Z",
-     "iopub.status.busy": "2024-07-14T22:24:28.461008Z",
-     "iopub.status.idle": "2024-07-14T22:24:30.658659Z",
-     "shell.execute_reply": "2024-07-14T22:24:30.658180Z",
-     "shell.execute_reply.started": "2024-07-14T22:24:28.461125Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01d2416e-dacc-43da-979c-f48cb4b025c1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -185,11 +179,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9df2fafc-56bd-4e9f-8d3b-d62613c45fff",
+   "cell_type": "raw",
+   "id": "2e293d53-bb11-43fc-83f4-747e56242c59",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
@@ -437,7 +429,7 @@
     "            X_test_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
     "else:\n",
-    "    print(\"Data is always spectral, nothing to do\")"
+    "    print(\"Data is already spectral, nothing to do\")"
    ]
   },
   {
@@ -576,11 +568,13 @@
     "    if not is_multivariate:\n",
     "        X_train_noisy = add_noise(X_train, noise_std)\n",
     "        X_test_noisy = add_noise(X_test, noise_std)\n",
-    "        X_val_noisy = add_noise(X_val, noise_std)\n",
+    "        if X_val is not None:\n",
+    "            X_val_noisy = add_noise(X_val, noise_std)\n",
     "\n",
     "    # MULTI\n",
     "    X_train_band_noisy = add_noise(X_train_band, noise_std)\n",
-    "    X_val_band_noisy = add_noise(X_val_band, noise_std)\n",
+    "    if X_val_band is not None:\n",
+    "        X_val_band_noisy = add_noise(X_val_band, noise_std)\n",
     "    X_test_band_noisy = add_noise(X_test_band, noise_std)\n"
    ]
   },
@@ -612,6 +606,16 @@
     "    X_pretrain_noisy = np.array(X_train_noisy)[indices]\n",
     "X_pretrain_band = np.array(X_train_band)[indices]\n",
     "X_pretrain_band_noisy = np.array(X_train_band_noisy)[indices]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "968ddf3d-23e8-4df6-9a0b-0027cc0b78e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_pretrain_band_noisy.shape"
    ]
   },
   {
