--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -504,7 +504,7 @@
     "        method = trial.suggest_categorical(\"method\", [\"random\", \"pearson\"])\n",
     "    # DESP\n",
     "    elif function_name == \"desp\":\n",
-    "        variance_target = trial.suggest_float('min_variance', 0.001, 0.02, step=0.001)\n",
+    "        variance_target = trial.suggest_float('variance_target', 0.001, 0.02, step=0.001)\n",
     "        variance_spread = trial.suggest_float('variance_spread', 0.001, 0.05, step=0.002)\n",
     "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
     "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
@@ -551,16 +551,16 @@
     "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
     "\n",
     "        # UNSUPERVISED PRETRAINING \n",
-    "        Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K)\n",
+    "        Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, seed=random.randint(0, 1000))\n",
     "        bias *= bias_scaling\n",
     "        Win *= input_scaling\n",
     "\n",
     "        if function_name == \"hadsp\":\n",
-    "            W, _, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
     "                                 target_rate, rate_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
     "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = nb_jobs_per_trial)\n",
     "        elif function_name == \"desp\":\n",
-    "            W, _, _, _ = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
     "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
     "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, \n",
     "                                    intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = nb_jobs_per_trial)\n",
@@ -702,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
