Minor code updates for compatibility + random_ei

--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -13,6 +13,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from joblib import Parallel, delayed\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -40,19 +42,25 @@
    "id": "16b2d29d-7fff-4032-8b36-559c722818b8",
    "metadata": {},
    "source": [
-    "## Aeon"
+    "## Aeon\n",
+    "\n",
+    "https://www.timeseriesclassification.com/dataset.php\n",
+    "\n",
+    "* SpokenArabicDigits\n",
+    "* CatsDogs\n",
+    "* LSST"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "acf3e3d3-52ac-44d9-b30d-81e142b0d1af",
+   "id": "52b1d405-d77a-4b4f-b00e-0ea1d0ef9981",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-07-10T18:48:10.250112Z",
-     "iopub.status.busy": "2024-07-10T18:48:10.249885Z",
-     "iopub.status.idle": "2024-07-10T18:48:13.977986Z",
-     "shell.execute_reply": "2024-07-10T18:48:13.977642Z",
-     "shell.execute_reply.started": "2024-07-10T18:48:10.250102Z"
+     "iopub.execute_input": "2024-09-05T13:21:20.203250Z",
+     "iopub.status.busy": "2024-09-05T13:21:20.203116Z",
+     "iopub.status.idle": "2024-09-05T13:21:21.174397Z",
+     "shell.execute_reply": "2024-09-05T13:21:21.174105Z",
+     "shell.execute_reply.started": "2024-09-05T13:21:20.203241Z"
     }
    },
    "source": [
@@ -79,8 +87,12 @@
     "\n",
     "if X_train_raw[0].shape[1] == 1:\n",
     "    is_multivariate = False\n",
+    "    use_spectral_representation = False\n",
     "else:\n",
     "    is_multivariate = True\n",
+    "    use_spectral_representation = True\n",
+    "\n",
+    "spectral_representation = \"mfcc\" # Can be None, \"stft\" or \"mfcc\"\n",
     "\n",
     "print(\" Number of instances = \", len(X_train_raw))\n",
     "print(\" Shape of X = \", X_train_raw[0].shape)\n",
@@ -110,21 +122,16 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1ffd4150-5417-404f-9007-6904d195d81e",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7503d3d-190f-4902-82ca-aae0c2a8d9ea",
    "metadata": {
     "collapsed": false,
-    "execution": {
-     "iopub.execute_input": "2024-07-08T13:07:51.212570Z",
-     "iopub.status.busy": "2024-07-08T13:07:51.212344Z",
-     "iopub.status.idle": "2024-07-08T13:09:00.139881Z",
-     "shell.execute_reply": "2024-07-08T13:09:00.139209Z",
-     "shell.execute_reply.started": "2024-07-08T13:07:51.212561Z"
-    },
     "jupyter": {
      "outputs_hidden": false
     }
    },
+   "outputs": [],
    "source": [
     "# load dataset using torchaudio\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
@@ -154,7 +161,7 @@
     "groups = list(groups)\n",
     "\n",
     "is_multivariate = False\n",
-    "\n",
+    "use_spectral_representation = False\n",
     "is_instances_classification = True\n",
     "\n",
     "le = LabelEncoder()\n",
@@ -180,13 +187,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32b17ef0-696d-4876-bdcc-bcfff500d29f",
+   "cell_type": "raw",
+   "id": "d7f662cc-3f07-4fe8-9caa-23beabb1364b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -222,22 +227,15 @@
   },
   {
    "cell_type": "raw",
-   "id": "1426fece-a207-4fb2-89d6-2637b610ba68",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-06T12:55:07.187815Z",
-     "iopub.status.busy": "2024-07-06T12:55:07.187541Z",
-     "iopub.status.idle": "2024-07-06T12:55:08.468570Z",
-     "shell.execute_reply": "2024-07-06T12:55:08.468190Z",
-     "shell.execute_reply.started": "2024-07-06T12:55:07.187802Z"
-    }
-   },
+   "id": "d51fcfae-ee2f-4e89-bb73-6160d3874d99",
+   "metadata": {},
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"JapaneseVowels\"\n",
+    "dataset_name = \"FSDD\"\n",
     "\n",
-    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name, seed=SEED)"
+    "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n",
+    "spectral_representation = \"mfcc\" # Can be None, \"stft\" or \"mfcc\""
    ]
   },
   {
@@ -358,22 +356,29 @@
     "    freq_train_data = x_train_band if is_multivariate else x_train\n",
     "    flat_train_data = np.concatenate(freq_train_data, axis=0) if is_instances_classification else freq_train_data\n",
     "    peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=WINDOW_LENGTH, threshold=1e-5, nperseg=1024, visualize=False)\n",
-    "    \n",
-    "    if is_multivariate:\n",
+    "\n",
+    "    # if it has use_spectral_representation, then it is multivariate\n",
+    "    if use_spectral_representation == True: \n",
+    "        if is_multivariate==False:\n",
+    "            raise ValueError(\"Cannot use spectral representation if it's not multivariate !\")\n",
+    "\n",
+    "    if not is_multivariate:\n",
     "        x_train_band = generate_multivariate_dataset(\n",
     "            x_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=\"stft\", hop=100\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
     "            x_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=\"stft\", hop=100\n",
     "        )\n",
-    "    else:\n",
+    "    elif is_multivariate and not use_spectral_representation:\n",
     "        x_train_band = generate_multivariate_dataset(\n",
     "            x_train, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=None, hop=100\n",
     "        )\n",
     "        x_val_band = generate_multivariate_dataset(\n",
     "            x_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation=None, hop=100\n",
     "        )\n",
-    "        \n",
+    "    else:\n",
+    "        print(\"Data is already spectral, nothing to do\")\n",
+    "\n",
     "    if not is_multivariate:\n",
     "        scaler_x_uni = MinMaxScaler(feature_range=(0, 1))\n",
     "        x_train, x_val, _ = scale_data(x_train, x_val, None, scaler_x_uni, is_instances_classification)       \n",
@@ -458,12 +463,12 @@
    },
    "outputs": [],
    "source": [
-    "from joblib import Parallel, delayed\n",
     "\n",
     "#Pretraining\n",
     "from reservoir.reservoir import init_matrices\n",
     "from connexion_generation.hadsp import run_algorithm\n",
-    "from scipy import sparse\n",
+    "from scipy import sparse, stats\n",
+    "from numpy import random\n",
     "\n",
     "# Evaluating\n",
     "from performances.esn_model_evaluation import init_and_train_model_for_classification, predict_model_for_classification, compute_score\n",
@@ -477,7 +482,7 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"random\" # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "function_name = \"random_ei\" # \"desp\" ou \"hadsp\", \"random\" or \"random_ei\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
@@ -509,7 +514,7 @@
     "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
     "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
     "        method = trial.suggest_categorical(\"method\", [\"pearson\"])\n",
-    "    elif function_name == \"random\":\n",
+    "    elif function_name == \"random\" or function_name == \"random_ei\":\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
     "    else:\n",
@@ -551,7 +556,10 @@
     "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
     "\n",
     "        # UNSUPERVISED PRETRAINING \n",
-    "        Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, seed=random.randint(0, 1000))\n",
+    "        if function_name == \"random_ei\":\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
+    "        else:\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, seed=random.randint(0, 1000))\n",
     "        bias *= bias_scaling\n",
     "        Win *= input_scaling\n",
     "\n",
@@ -564,7 +572,7 @@
     "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
     "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, \n",
     "                                    intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = nb_jobs_per_trial)\n",
-    "        elif function_name == \"random\":\n",
+    "        elif function_name == \"random\" or function_name == \"random_ei\":\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
     "        else:\n",
@@ -594,18 +602,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94a7cbad-31bd-49d2-a3c1-00d9ccb6aaab",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import optuna\n",
     "from optuna.samplers import TPESampler\n",
-    "import re\n",
+    "from performances.utility import camel_to_snake\n",
     "\n",
-    "def camel_to_snake(name):\n",
-    "    str1 = re.sub('(.)([A-Z][a-z]+)', r'\\1_\\2', name)\n",
-    "    return re.sub('([a-z0-9])([A-Z])', r'\\1_\\2', str1).lower()\n",
     "url= \"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
     "print(url)\n",
     "\n",
@@ -624,7 +627,7 @@
     "    study.optimize(objective, n_trials=n_trials)\n",
     "\n",
     "N_TRIALS = 400\n",
-    "n_parallel_studies = 12\n",
+    "n_parallel_studies = 1\n",
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
