--- a/3.algo_analysis.ipynb
+++ b/3.algo_analysis.ipynb
@@ -1431,7 +1431,7 @@
    "id": "56dec338",
    "metadata": {},
    "source": [
-    "### Memory capacity"
+    "### Ingormation Processing capacity"
    ]
   },
   {
@@ -1608,31 +1608,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "264353ce",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-07-16T15:34:28.051764Z",
-     "iopub.status.busy": "2024-07-16T15:34:28.051589Z",
-     "iopub.status.idle": "2024-07-16T15:34:28.327428Z",
-     "shell.execute_reply": "2024-07-16T15:34:28.326832Z",
-     "shell.execute_reply.started": "2024-07-16T15:34:28.051750Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'connexion_generation.bounded_adsp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mconnexion_generation\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbounded_adsp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mconnexion_generation\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutility\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mreservoir\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mreservoir\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'connexion_generation.bounded_adsp'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import connexion_generation.bounded_adsp\n",
     "import connexion_generation.utility\n",
