--- a/4.test performances.ipynb
+++ b/4.test performances.ipynb
@@ -434,12 +434,8 @@
    "outputs": [],
    "source": [
     "import optuna\n",
-    "import re\n",
+    "from performances.utility import camel_to_snake\n",
     "\n",
-    "def camel_to_snake(name):\n",
-    "    str1 = re.sub('(.)([A-Z][a-z]+)', r'\\1_\\2', name)\n",
-    "    return re.sub('([a-z0-9])([A-Z])', r'\\1_\\2', str1).lower()\n",
-    "    \n",
     "function_name = \"random\" # \"desp\" ou \"hadsp\" or \"random\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
@@ -455,12 +451,12 @@
     "\n",
     "# Print the best hyperparameters\n",
     "print(\"Best hyperparameters: \")\n",
-    "# Loop through the hyperparameters and assign them to variables\n",
-    "use_full_instance = True if is_instances_classification else False\n",
-    "\n",
     "for param_name, param_value in best_trial.params.items():\n",
     "    globals()[param_name] = param_value\n",
-    "    print(param_name, param_value)"
+    "    print(param_name, param_value)\n",
+    "\n",
+    "if not is_instances_classification:\n",
+    "    use_full_instance = None\n"
    ]
   },
   {
